Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -318,6 +318,10 @@ li {
     .dual {
         width: 90%;
     }
+
+    .container{
+        padding: 3%;
+    }
 }
 
 .item {
